# yiri-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  check.yml
src/: handler.rs  main.rs  talk.rs  utils.rs
