[package]
name = "yiri-rs"
version = "0.1.0"
edition = "2021"
authors = ["忘忧北萱草 <wybxc@qq.com>"]
description = "之之小姐 ricq 版"
repository = "https://github.com/Wybxc/yiri-rs"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
bytes = "1.4.0"
futures-util = "0.3.27"
hex = "0.4.3"
image = "0.24.5"
qrcode = "0.12.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
requestty = "0.5.0"
reqwest = { version = "0.11.16", default-features = false, features = [
    "rustls-tls",
] }
ricq = "0.1.19"
rqrr = "0.6.0"
serde = "1.0.157"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "fs", "io-std"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
lto = true
