[package]
name = "yiri-rs"
version = "0.1.0"
edition = "2021"
authors = ["忘忧北萱草 <wybxc@qq.com>"]
description = "之之小姐 ricq 版"
repository = "https://github.com/Wybxc/yiri-rs"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
rand = "0.8.5"
reqwest = { version = "0.11.15", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.164"
serde_json = "1.0.94"
tracing = "0.1.38"

chocho = { git = "https://github.com/Wybxc/chocho.git" }
chocho_msg = { git = "https://github.com/Wybxc/chocho.git" }

[profile.release]
lto = true

[patch.crates-io]
ricq = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
ricq-core = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
